# my_snipaste

./: .gitignore  .mcp.json  MySnipaste.spec  OCR_FIX_SUMMARY.md  README.md  build.py  check_tesseract.py  debug_hotkey.py  install_chinese_ocr.py  main.py  mysnipaste_settings.json  pyproject.toml  refactor-plan.md  requirements-dev.txt  requirements.txt  test_hotkey_switch.py
.claude/: settings.local.json
.codegraph/: daemon.pid
.gitee/workflows/: build.yml
.github/workflows/: build-cross-platform.yml  build-macos.yml
.omo/run-continuation/: ses_1b67f64d9ffelcWFeAwOiEQAOc.json
docs/: ARCHITECTURE.md  BUILD.md  DESIGN_SYSTEM.md  FEATURE_GAP.md  FILE_HANDLING.md  GITEE_GO.md  GITHUB_ACTIONS.md  HOTKEYS.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_ROADMAP.md  LOGGING.md  MACOS_TESSERACT.md  refactoring-plan.md  session-completed-features.md
scripts/: build_common.py  build_macos.py  build_nuitka_macos.py  build_nuitka_windows.py  build_windows.py  generate_icon.py
src/: __init__.py  app.py  app_capture.py  editor.py  editor_items.py  editor_toolbar.py  editor_view.py  logger.py  ocr_engine.py  ocr_mixin.py  overlay.py  overlay_actions.py  overlay_rendering.py  overlay_toolbar.py  permissions.py  pin_window.py  tray.py  utils.py
src/annotations/: __init__.py  (+3 more)
tests/: conftest.py  test_constants.py  test_effect_rendering.py  test_hotkeys.py  test_i18n.py  test_icon_generation.py  test_logger.py  test_ocr_engine.py  test_permissions.py  test_screenshot_history.py  test_settings.py  test_settings_memory.py  test_toast.py  test_tool_settings_memory.py  test_utils.py
(+124 files in other folders)
