[project]
name = "MySnipaste"
version = "1.1.0"
description = "A cross-platform screenshot tool inspired by Snipaste"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "def __repr__",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N802", "N803", "N806"]

[tool.ruff.lint.per-file-ignores]
"src/resources/icons/*" = ["E501"]
"src/overlay/*" = ["E501"]
"src/ui/pin_window.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
